# fancontrol-gui

./: .gitignore  CMakeLists.txt  Fancontrol-GUI.kdev4  README.md  fancontrol-gui.git.kdev4  flake.nix  readMe.MD
.kdev4/: fancontrol-gui.git.kdev4
fancontrol-gui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  metadata.desktop  org.fancontrol.gui.appdata.xml  org.kde.fancontrol.gui.appdata.xml  org.kde.fancontrol.gui.desktop
fancontrol-gui/other/: fancontrol-gui.desktop
fancontrol-gui/package/: metadata.desktop
fancontrol-gui/package/contents/ui/: Application.qml  ConfigfileTab.qml  PwmFansTab.qml  SensorsTab.qml  SettingsTab.qml
fancontrol-gui/qml/: fancontrol-gui.qml
fancontrol-gui/src/: gui.cpp  gui.h  hwmon.cpp  hwmon.h  loader.cpp  loader.h  main.cpp  sensors.cpp  sensors.h  systemdcommunicator.cpp  systemdcommunicator.h  systemtrayicon.cpp  systemtrayicon.h  windowconfig.cpp  windowconfig.h
helper/: CMakeLists.txt  CTestTestfile.cmake  CreateSystemSymlinks.cmake  Makefile  MoveSystemFiles.cmake  cmake_install.cmake  fancontrol-gui.actions  fancontrol.gui.helper.conf  fancontrol.gui.helper.service  fancontrol_gui.actions  helper.actions.in  helper.conf.in  helper.service.in  org.kde.kcontrol.kcmfancontrol.conf  org.kde.kcontrol.kcmfancontrol.service
helper/src/: helper.cpp  helper.h
import/: CMakeLists.txt
import/qml/: ErrorDialog.qml  FanControls.qml  FanHeader.qml  FanItem.qml  OptionInput.qml  ProfilesDialog.qml  PwmFan.qml  PwmPoint.qml  SettingsForm.qml  StatusPoint.qml  colors.js  math.js  qmldir  units.js
import/src/: config.cpp  config.h  fan.cpp  fan.h  fancontrolaction.h  fancontrolqmlextension.cpp  fancontrolqmlextension.h  guibase.cpp  guibase.h  hwmon.cpp  hwmon.h  loader.cpp  loader.h  pwmfan.cpp  pwmfan.h  pwmfanmodel.cpp  pwmfanmodel.h  sensor.cpp  sensor.h  systemdcommunicator.cpp  systemdcommunicator.h  temp.cpp  temp.h  tempmodel.cpp  tempmodel.h
import/tests/: CMakeLists.txt  fantest.cpp  fantest.h  loadertest.cpp  loadertest.h  pwmfantest.cpp  pwmfantest.h  temptest.cpp  temptest.h  testfan.cpp  testfan.h  testpwmfan.cpp  testpwmfan.h  testtemp.cpp  testtemp.h
kcm/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fancontrol-kcm.desktop  kcm_fancontrol.desktop  regenerateindex.sh
kcm/package/: metadata.desktop
kcm/package/contents/ui/: KCM.qml
kcm/src/: fancontrolkcm.cpp  fancontrolkcm.h
lib/: CMakeLists.txt
lib/src/: config.cpp  config.h  fan.cpp  fan.h  fancontrolaction.h  guibase.cpp  guibase.h  hwmon.cpp  hwmon.h  loader.cpp  loader.h  pwmfan.cpp  pwmfan.h  pwmfanmodel.cpp  pwmfanmodel.h  sensor.cpp  sensor.h  sensors.cpp  sensors.h  systemdcommunicator.cpp  systemdcommunicator.h  temp.cpp  temp.h  tempmodel.cpp  tempmodel.h
nix/: default.nix  hm.nix
package/: metadata.desktop
package/contents/scripts/: arrayfunctions.js  math.js  units.js
package/contents/ui/: Application.qml  ConfigfileTab.qml  ErrorDialog.qml  KCM.qml  OptionInput.qml  PwmFan.qml  PwmFansTab.qml  PwmPoint.qml  SensorsTab.qml  SettingsTab.qml  StatusPoint.qml  ToolTip.qml
plasmoid/: CMakeLists.txt
plasmoid/package/: metadata.desktop
plasmoid/package/contents/config/: config.qml  main.xml
plasmoid/package/contents/ui/: configGeneral.qml  main.qml
po/: de_DE.mo  de_DE.po  extract_messages.sh  fancontrol-gui.pot  kcm_fancontrol.pot
po/de/: kcm_fancontrol.po
po/hu/: kcm_fancontrol.po
polkit/: CMakeLists.txt  rules.in
share/: CMakeLists.txt  share.qrc
share/javascript/: arrayfunctions.js  coordinates.js  math.js  units.js
share/qml/: ConfigfileTab.qml  OptionInput.qml  PwmFan.qml  PwmFansTab.qml  PwmPoint.qml  SensorsTab.qml  SettingsTab.qml  ToolTip.qml
share/src/: export.h  hwmon.cpp  hwmon.h  loader.cpp  loader.h  sensors.cpp  sensors.h  systemdcommunicator.cpp  systemdcommunicator.h
tests/: CMakeLists.txt  loadertest.cpp  loadertest.h
